--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/ui": "^4.2",
         "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.71",
-        "phpmailer/phpmailer": "^6.8"
+        "phpmailer/phpmailer": "^6.8",
+        "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
